name:          sql
version:       0.0.0
build-type:    Simple
cabal-version: >= 1.10

library
  hs-source-dirs:   src
  default-language: Haskell2010
  build-depends:    base >= 4.7 && < 5, template-haskell >= 2.11 && < 3,
                    parsec, containers, bytestring, contravariant, tagged, mtl
  exposed-modules:  Language.SQL
                    Language.SQL.Backend
                    Language.SQL.Query
