name:          sql
version:       0.0.0
build-type:    Simple
cabal-version: >= 1.10

library
  hs-source-dirs:   src
  ghc-options:      -fno-warn-name-shadowing
  default-language: Haskell2010
  build-depends:    base >= 4.7 && < 5, template-haskell >= 2.11 && < 3,
                    parsec, bytestring, tagged, mtl, utf8-string, haskell-src-meta
  exposed-modules:  Language.SQL
                    Language.SQL.Builder
                    Language.SQL.Query
                    Language.SQL.TH
